--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<header class="major">
 						<h2>Who I am?</h2>
 						<p>I am an advanced student in mechatronics engineering with a strong orientation to artificial
-							intelligence and programming. </p>
+							intelligence, control and programming. </p>
 					</header>
 					<p>I am passionate about math, data, learning, new technologies and challenges. I am self-taught and
 						very curious.
@@ -210,13 +210,18 @@
 					</p>
 					<ul class="feature-icons">
 						<li class="icon solid fa-tools"><b>Python</b> ( GUI | OOP | DB )</li>
-						<li class="icon solid fa-tools"><b>Tensorflow, Pandas </b> ( IA & ML )</li>
-						<li class="icon solid fa-tools"><b>Front-end</b>( HTML | CSS | JS )</li>
-						<li class="icon solid fa-tools"><b>SQL</b> (Relational Database) </li>
-						<li class="icon solid fa-tools"><b>OpenCv </b>(python)</li>
-						<li class="icon solid fa-tools">Version Control <b>(Git | Github)</b> </li>
 						<li class="icon solid fa-tools"><b>Matlab </b> (Robotics & Science)</li>
-						<li class="icon solid fa-tools"><b>Simulink </b> (Simulation)</li>
+						<li class="icon solid fa-tools"><b>Simulink, StateFlow, Simscape </b> (Simulation, modeling and control)</li>
+						<li class="icon solid fa-tools"><b>Codesys, Tia Portal</b>(PLC, Control) </li>
+						<li class="icon solid fa-tools"><b>SolidEdge </b>(Mecanic design and simulation) </li>
+						<li class="icon solid fa-tools"><b>Proteus </b>(Electronic design and simulation) </li>
+						<li class="icon solid fa-tools"><b>AVR Microcontrollers</b></li>
+						<li class="icon solid fa-tools"><b>ARM Microcontrollers</b> </li>
+						<li class="icon solid fa-tools"><b>Tensorflow, Pandas </b> ( IA & ML )</li>
+						<li class="icon solid fa-tools"><b>C/C++</b></li>
+						<li class="icon solid fa-tools"><b>OpenCv </b>(python)</li>
+						<li class="icon solid fa-tools"><b>Excel, SQL</b> </li>
+						
 						<!-- <li class="icon solid fa-tools"> SCADA & PLC (Automation)</li>
 										<li class="icon solid fa-tools">SolidEdge (Mecanic dising and simulation) </li>
 										<li class="icon solid fa-tools"> Proteus (Electronic dising and simulation) </li>
@@ -262,7 +267,7 @@
 								</p>
 								<ul class="ml-5">
 									<li> Development and implementation of a web application, which allows the consultation,
-										graphical and numerical, of the database of the Geodesy Laboratory of the UNCuyo. </li>
+										graphical and numerical, of the database of the Atmospheric Science Laboratory of the UNCuyo. </li>
 									<li> Design of databases (<b>Relational models</b>). </li>
 									<li> Cleansing, transforming and modelling data. </li>
 									<li> Visualization and statistical analysis of data.</li>
@@ -326,35 +331,6 @@
 					<h3>A Few Projects</h3>
 					<p></p>
 					<div class="mycontainer2">
-						<div class="mycard" style="margin-bottom:35px ;">
-							<img src="images/cv.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
-							<div class="container">
-								<h4>Computer vision</h4>
-								<p>An artificial vision program for the recognition and classification of fruits. In
-									this project I implemented a hybrid kmeans algorithm and a knn algorithm.
-									<br>
-									<a href="https://github.com/renzo-guarise/cv" class="icon brands fa-github"><span
-											class="label">Github</span></a>
-									<a href="https://youtu.be/GO26Q5ICeL4" class="icon brands fa-youtube"><span
-											class="label">YouTube</span></a>
-								</p>
-							</div>
-						</div>
-						<div class="mycard">
-							<img src="images/Figure_1.jpeg" alt="Avatar" style="width:100%" class="rounded-corners">
-							<div class="container">
-								<h4>Neuronal Networks</h4>
-								<p> A clustering and a regression project that were carried out with a fully
-									connected
-									feedforward neural network.
-									<br>
-									<a href="https://github.com/guari12/ML" class="icon brands fa-github"><span
-											class="label">Github</span></a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="mycontainer2">
 						<div class="mycard"style="margin-bottom:35px ;">
 							<img src="images/PMSM.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
 							<div class="container">
@@ -370,17 +346,15 @@
 							</div>
 						</div>
 						<div class="mycard">
-							<img src="images/robot.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
+							<img src="images/scada.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
 							<div class="container">
-								<h4>Robot Arm Control </h4>
-								<p> Project of Graphical Interface and Client-Server Connection for the control of
-									an
-									ABB IRB 460 robot arm.
+								<h4>SCADA/ Modbus RTU </h4>
+								<p> In this project, a SCADA system is modeled, designed, analyzed and simulated. The
+									objective of the system is the monitoring of a process implemented in a PLC,
+									allowing the operator to have a complete view of the process variables.
 									<br>
-									<a href="https://youtu.be/PqFfFtVRYwU" class="icon brands fa-youtube"><span
-											class="label">YouTube</span></a>
-									<a href="https://github.com/renzo-guarise/RAC" class="icon brands fa-github"><span
-											class="label">Github</span></a>
+									<a href="https://drive.google.com/file/d/1FSnBPkZ9fnoiU_8jmk9AjcWYOgrY9Byk/view?usp=sharing"
+										class="icon brands fa-google-drive"><span class="label">Drive</span></a>
 								</p>
 							</div>
 						</div>
@@ -405,15 +379,17 @@
 							</div>
 						</div>
 						<div class="mycard">
-							<img src="images/scada.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
+							<img src="images/robot.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
 							<div class="container">
-								<h4>SCADA/ Modbus RTU </h4>
-								<p> In this project, a SCADA system is modeled, designed, analyzed and simulated. The
-									objective of the system is the monitoring of a process implemented in a PLC,
-									allowing the operator to have a complete view of the process variables.
+								<h4>Robot Arm Control </h4>
+								<p> Project of Graphical Interface and Client-Server Connection for the control of
+									an
+									ABB IRB 460 robot arm.
 									<br>
-									<a href="https://drive.google.com/file/d/1FSnBPkZ9fnoiU_8jmk9AjcWYOgrY9Byk/view?usp=sharing"
-										class="icon brands fa-google-drive"><span class="label">Drive</span></a>
+									<a href="https://youtu.be/PqFfFtVRYwU" class="icon brands fa-youtube"><span
+											class="label">YouTube</span></a>
+									<a href="https://github.com/renzo-guarise/RAC" class="icon brands fa-github"><span
+											class="label">Github</span></a>
 								</p>
 							</div>
 						</div>
@@ -457,6 +433,35 @@
 						</div>
 					</div>
 					<div class="mycontainer2">
+						<div class="mycard" style="margin-bottom:35px ;">
+							<img src="images/cv.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
+							<div class="container">
+								<h4>Computer vision</h4>
+								<p>An artificial vision program for the recognition and classification of fruits. In
+									this project I implemented a hybrid kmeans algorithm and a knn algorithm.
+									<br>
+									<a href="https://github.com/renzo-guarise/cv" class="icon brands fa-github"><span
+											class="label">Github</span></a>
+									<a href="https://youtu.be/GO26Q5ICeL4" class="icon brands fa-youtube"><span
+											class="label">YouTube</span></a>
+								</p>
+							</div>
+						</div>
+						<div class="mycard">
+							<img src="images/Figure_1.jpeg" alt="Avatar" style="width:100%" class="rounded-corners">
+							<div class="container">
+								<h4>Neuronal Networks</h4>
+								<p> A clustering and a regression project that were carried out with a fully
+									connected
+									feedforward neural network.
+									<br>
+									<a href="https://github.com/guari12/ML" class="icon brands fa-github"><span
+											class="label">Github</span></a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="mycontainer2">
 						<div class="mycard">
 							<img src="images/drone.jpg" alt="Avatar" style="width:100%" class="rounded-corners">
 							<div class="container">
@@ -492,7 +497,7 @@
 
 								<ul class="ml-5">
 									<li> In sixth year (last) </li>
-									<li> Sixth best average of the engineering faculty (Over 1000 students).</li>
+									<li> Sixth best engineering average(Over 1000 students).</li>
 									<li> Second best mechatronic engineering average. </li>
 									<a href="https://drive.google.com/file/d/1jxiKuwyLMWGmgxfCizAgBDWEFU4jFS4X/view?usp=sharing"
 										class="icon brands fa-google-drive"><span class="label">Drive</span></a>
